# gsof

./: .gitignore  Gosf.sln  Gsof.sln  README.md  testEnvironments.json
.github/workflows/: dotnet.yml
Gosf/: Gosf.csproj  README.md
Gosf/Dynamic/: DelegatingMetaObject.cs
Gosf/Extensions/: ColorSpaceExtension.cs  DateTimeExtension.cs  EnumerableExtension.cs  IntPtrExtension.cs  Md5Extension.cs  ProcessEx.cs  ReflectionExtension.cs  (+1 more)
Gsof/: Gosf - Backup.csproj  Gsof.csproj  README.md
Gsof.Native/: Buffer.cs  DynamicNative.cs  Gsof.Native.csproj  INative.cs  LoadLibraryFlags.cs  Native.cs  NativeFactory.cs  NativeFunctonAttribute.cs  NativeMethods.cs  README.md
Gsof.Native.Test/: Gsof.Native.Test.csproj  Native.cs  NativeBuffer.cs
Gsof.Test/: Boolearn.cs  Byte.cs  Gsof.Test.csproj  IntPtrEx.cs  UnitTest1.cs
Gsof.Test.Lib/: CMakeLists.txt  Gsof.Test.Lib.c
Gsof.Windows/: Gsof.Windows.csproj  Kernel.cs
Gsof.Xaml/: AssemblyInfo.cs  Gsof.Xaml.csproj
Gsof.Xaml.BlankWindow/: AssemblyInfo.cs  BlankWindow.cs  BlankWindowHelpers.cs  Glow.cs  GlowDirection.cs  GlowWindow.xaml  GlowWindow.xaml.cs  Gsof.Xaml.BlankWindow.csproj  PropertyChangeNotifier.cs  WindowSettings.cs
Gsof.Xaml.Controls/: AnimationFactory.cs  AssemblyInfo.cs  Clock.cs  FlipView.cs  FlipViewItem.cs  FlipViewPanel.cs  Flyout.cs  Gsof.Xaml.Controls.csproj  NumericUpDown.cs
Gsof.Xaml.Demo/: App.xaml  App.xaml.cs  Gsof.Xaml.Demo.csproj  MainWindow.xaml  MainWindow.xaml.cs  Window1.xaml  Window1.xaml.cs  Window2.xaml  Window2.xaml.cs  Window3.xaml  Window3.xaml.cs  Window4.xaml  Window4.xaml.cs
(+95 files in other folders)
